@@ -2,14 +2,16 @@ package zephyr.designpattern.abstractfactory.factory;
 
 import lombok.extern.slf4j.Slf4j;
 
+import java.lang.reflect.InvocationTargetException;
+
 @Slf4j
 public abstract class Factory {
 
     public static Factory getFactory(String classname) {
         Factory factory = null;
         try {
-            factory = (Factory) Class.forName(classname).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            factory = (Factory) Class.forName(classname).getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
             log.error(e.getMessage(), e);
         }
         return factory;
